--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation "io.reactivex.rxjava2:rxjava:2.2.9"
 
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
 
 }
